feat: fix create participant conflit